--- a/lfg.srv.conf
+++ b/lfg.srv.conf
@@ -1,10 +1,12 @@
 server {
-    server_name lfg.chrisjowen.uk;
     listen 80;
-  
+    listen   443 ssl;
+    server_name group.chrisjowen.net;
+    ssl_certificate    /apps/chrisjowen.crt;
+    ssl_certificate_key /apps/chrisjowen.key;
+
     location / {
         proxy_pass http://localhost:4490;
-        client_max_body_size 200m;
     }
     location /socket/ {
         proxy_pass http://localhost:4489;
@@ -15,9 +17,6 @@ server {
     }
       location /api/ {
         proxy_pass http://localhost:4489;
-        proxy_http_version 1.1;
-        proxy_set_header Upgrade $http_upgrade;
-        proxy_set_header Connection "upgrade";
-        proxy_read_timeout 86400;
-    }
+      }
 }
+
