--- a/lfg.srv.conf
+++ b/lfg.srv.conf
@@ -16,7 +16,16 @@ server {
         proxy_read_timeout 86400;
     }
       location /api/ {
+        proxy_set_header X-Real-IP $remote_addr;
         proxy_pass http://localhost:4489;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header Host $https_host;
+      }
+      location /auth/ {
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_pass http://localhost:4489;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header Host $https_host;
       }
 }
 
