--- a/lfg.srv.conf
+++ b/lfg.srv.conf
@@ -18,14 +18,18 @@ server {
       location /api/ {
         proxy_set_header X-Real-IP $remote_addr;
         proxy_pass http://localhost:4489;
+        proxy_set_header X-Forwarded-Port $port;
+        proxy_set_header X-Forwarded-Proto https;
+        proxy_set_header X-Forwarded-Host $host;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header Host $https_host;
       }
       location /auth/ {
         proxy_set_header X-Real-IP $remote_addr;
-        proxy_pass http://localhost:4489;
+        proxy_set_header X-Forwarded-Port $port;
+        proxy_set_header X-Forwarded-Proto https;
+        proxy_set_header X-Forwarded-Host $host;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header Host $https_host;
+        proxy_pass http://localhost:4489;
+
       }
 }
-
