--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,7 @@ services:
     environment:
       POSTGRES_USER: postgres
       POSTGRES_PASSWORD: postgres
-      POSTGRES_DB: event_service_dev
+      POSTGRES_DB: totem_dev
   test_db:
     image: postgis/postgis
     restart: always
@@ -17,4 +17,4 @@ services:
     environment:
       POSTGRES_USER: postgres
       POSTGRES_PASSWORD: postgres
-      POSTGRES_DB: event_service_test
+      POSTGRES_DB: totem_test
