--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -34,7 +34,7 @@ jobs:
           name: Save Docker image layer cache
           command: |
             mkdir -p /caches
-            docker save -o /caches/app.tar app
+            docker save -o /caches/app.tar chrisjowen/problem_svc
       - save_cache:
           key: v1-{{ .Branch }}-{{ epoch }}
           paths:
