--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -29,7 +29,7 @@ jobs:
       - run:
           name: Build application Docker image
           command: |
-            docker build --cache-from=app -t chrisjowen/problem_svc:latest .
+            docker build --build-arg OPEN_AI_KEY=${OPEN_AI_KEY}  --cache-from=app -t chrisjowen/problem_svc:latest .
       - run:
           name: Save Docker image layer cache
           command: |
